@@ -23,6 +23,13 @@
 //  ... it's being edited very rapidly so sorry for non-commented
 //        and maybe "ugly" code ...
 ////////////////////////////////////////////////////////////////////////////
+/**
+ *  @file cfindtextdlg.h
+ *
+ *  @brief Declaration Find-dialog.
+ */
+// RCS ID line follows -- this is updated by CVS
+// $Id$
 
 #if !defined(AFX_CFINDTEXTDLG_H__F59009E3_7B01_11D2_8C4F_0080ADB86836__INCLUDED_)
 #define AFX_CFINDTEXTDLG_H__F59009E3_7B01_11D2_8C4F_0080ADB86836__INCLUDED_
@@ -36,7 +43,6 @@
 
 class CCrystalTextView;
 
-
 /**
  * @brief Infos about the last search settings (saved in registry)
  *
@@ -45,7 +51,7 @@ class CCrystalTextView;
 struct LastSearchInfos
   {
     int m_nDirection;       // only for search
-    BOOL m_bReplaceNoWrap;  // only for replace
+    BOOL m_bNoWrap;
     BOOL m_bMatchCase;
     CString m_sText;
     BOOL m_bWholeWord;
@@ -81,6 +87,7 @@ public :
     CString m_sText;
     BOOL m_bWholeWord;
     BOOL m_bRegExp;
+    BOOL m_bNoWrap;
     //}}AFX_DATA
 
     // Overrides
