@@ -2,6 +2,13 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-08-05 Kimmo
+ PATCH: [ 1534770 ] Add "don't wrap end of line" option for Find
+  Src: Merge.rc resource.h
+  Src/editlib: ccrystaleditview.cpp ccrystaltextview.cpp ccrystaltextview.h
+   ceditreplacedlg.cpp cfindtextdlg.cpp cfindtextdlg.h
+  Src/Languages/*: Merge*.rc
+
 2006-08-03 Jan Hryz
  Czech translation - update
   Src/Languages/Czech/MergeCzech.rc
